fix(ui): uneven edges and nodes alignment (#6047)

--- a/ui/src/features/project/pipelines/nodes/node-size-source-of-truth.module.less
+++ b/ui/src/features/project/pipelines/nodes/node-size-source-of-truth.module.less
@@ -1,23 +1,15 @@
 .stage-node-size {
-    min-width: 250px;
-    width: fit-content;
-    max-width: 400px;
+    width: 270px;
 }
 
 .warehouse-node-size {
-    min-width: 250px;
-    width: fit-content;
-    max-width: 400px;
+    width: 270px;
 }
 
 .subscription-node-size {
-    min-width: 250px;
-    width: fit-content;
-    max-width: 400px;
+    width: 250px;
 }
 
 .stacked-node-size {
-    min-width: 250px;
-    width: fit-content;
-    max-width: 400px;
+    width: 250px;
 }
